--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,11 +1,19 @@
-<div class="visible-xs visible-sm visible-md visible-lg">
-	<div>
-		<form name='myForm'>
-			<input type="text" id="username" class="form-control" placeholder="请输入用户名" transparent autofocus x-webkit-speech ng-minlength='3' ng-maxlength='8' ng-model="upuser.username" required/>
-			<input type="text" id="password" class="form-control" placeholder="请输入密码" transparent autofocus x-webkit-speech ng-minlength='6' ng-maxlength='16' ng-model="upuser.password" required/>
+<div class="login">
+	<div class="bt">登录页面</div>
+	<form name='myForm'>
+		<label>
+			用户名：<input type="text" id="username" class="form-control" placeholder="请输入用户名" transparent autofocus x-webkit-speech ng-minlength='3' ng-maxlength='8' ng-model="upuser.username" required/>
+		</label>
+		<label>
+		密码：<input type="password" id="password" class="form-control" placeholder="请输入密码" transparent autofocus x-webkit-speech ng-minlength='6' ng-maxlength='16' ng-model="upuser.password" required/>
+		</label>
+		<div class="tiaokuan">
+			<input type="checkbox" checked="trun" required/>我已同意此条款
+		</div>
+		
+		<div class="zd">
 			<input type='submit' value='注册' class="zhuc" ng-disabled='myForm.$invalid' ng-click='fn1()'/>
-			<input type='submit' value='登录' class="denglu" ng-disabled='myForm.$invalid' ng-click='fn()'/>
-			<input type="checkbox" class="tiaokuan" required/>我已同意此条款
-		</form>
-	</div>
+		<input type='submit' value='登录' class="denglu" ng-disabled='myForm.$invalid' ng-click='fn()'/>
+		</div>	
+	</form>
 </div>
