--- a/app/views/list.html
+++ b/app/views/list.html
@@ -1,6 +1,26 @@
-<div>
+<div class="big-bar">
+    <div class="header-ml">测试人员</div>
+    <p class="search"><input type="text" name="" id="" value="" placeholder="搜索" class="ipt-sou" /><span>搜索</span></p>
+</div>
+<div class="bug-bar">
+	<p class="name-ml">发布人:<span class="bug-sp"></span></p>
+	<div class="bug-content">
+		<div class="bug-left">
+			<p class="bug-name">ddf</p>
+			<p class="bug-say">sadvfv</p>
+		</div>
+		<div class="bug-right">
+			<p class="importance">重要性</p>
+			<p class="pinlv">频率</p>
+			<p class="errortion">错误状态</p>
+		</div>
+	</div>
+	<p class="time-ml">2016-11-12</p>
+</div>
+<div class="addbug"><span class="btn-addbug">+</span></div>
+<!--<div>
   <div ng-repeat="x in data">
   	{{x.summary}}
   </div>
   <div ng-if="isshow">+</div>
-</div>
+</div>-->
