--- a/app/views/list.html
+++ b/app/views/list.html
@@ -2,7 +2,7 @@
     <div class="header-ml">测试人员</div>
     <p class="search"><input type="text" name="" id="" value="" placeholder="搜索" class="ipt-sou" /><span>搜索</span></p>
 </div>
-<div class="bug-bar">
+<!--<div class="bug-bar">
 	<p class="name-ml">发布人:<span class="bug-sp"></span></p>
 	<div class="bug-content">
 		<div class="bug-left">
@@ -16,8 +16,13 @@
 		</div>
 	</div>
 	<p class="time-ml">2016-11-12</p>
-</div>
+</div>-->
+
+
+
+
 <div class="addbug"><span class="btn-addbug">+</span></div>
+
 <!--<div>
   <div ng-repeat="x in data">
   	{{x.summary}}
