--- a/app/styles/list.css
+++ b/app/styles/list.css
@@ -43,24 +43,23 @@
 }
 
 
-.bug-bar{
+/*.bug-bar{
 	margin-left:0.8rem;
 	margin-right:0.8rem;
 	height:10rem;
 	background:#E4E5E4;;
 	/*border:0.05rem solid #0190DD;*/
-	margin-top:2.2rem;
+	/*margin-top:2.2rem;
 	border-radius: 0.8rem;
     
-}
-.name-ml{
+}*/
+/*.name-ml{
 	width:92%;
 	height:1rem;
 	font-size:0.65rem;
 	color:#000000;
 	margin-left:0.6rem;
 	margin-top:0.4rem;
-    /*background:red;*/
     line-height:1rem;
     float:left;
 }
@@ -70,14 +69,11 @@
 	float:left;
 	margin-left:0.6rem;
 	margin-top:0.4rem;
-	/*background:yellow;*/
 }
 .bug-left{
 	width:70%;
 	height:100%;
-	/*background:darkblue;*/
-	font-size:0.65rem;
-	
+	font-size:0.65rem;	
 	font-family: "微软雅黑";
 	color:#000000;
 	float:left;
@@ -86,7 +82,6 @@
 	font-weight:600;
 	width:100%;
 	height:1.2rem;
-	/*background: red;*/
 	margin-top:0.5rem;
 	float:left;
 	font-size:0.65rem;
@@ -96,7 +91,6 @@
 	width:100%;
 	height:4rem;
 	float:left;
-	/*background:lime;*/
 	margin-top:0.3rem;
 }
 .bug-right{
@@ -111,7 +105,6 @@
 	color:#000000;
 	margin-left:0.6rem;
 	margin-top:0.4rem;
-    /*background:lime;*/
     line-height:1rem;
     float:left;
     text-align:right;
@@ -133,7 +126,7 @@
 }
 .errortion{
 	background:;
-}
+}*/
 
 .addbug{
 	width:100%;
