--- a/app/views/list.html
+++ b/app/views/list.html
@@ -1,8 +1,7 @@
 <div class="big-bar">
-    <div class="header-ml">测试人员</div>
+    <div class="header-ml" ng-model="cc">{{cc}}</div>
     <p class="search"><input type="text" name="" id="" value="" placeholder="搜索" class="ipt-sou" /><span>搜索</span></p>
 </div>
-<<<<<<< HEAD
 <!--<div class="bug-bar">
 	<p class="name-ml">发布人:<span class="bug-sp"></span></p>
 =======
@@ -28,12 +27,9 @@
 
 
 <div class="addbug"><span class="btn-addbug">+</span></div>
-
-=======
 	<p class="time-ml">{{x.date}}</p>
 </div>
-<div class="addbug"><span class="btn-addbug" ng-click="ff">+</span></div>
->>>>>>> origin/master
+<div class="addbug"><span class="btn-addbug" ng-click="ff()">+</span></div>
 <!--<div>
   <div ng-repeat="x in data">
   	{{x.summary}}
