--- a/app/views/list.html
+++ b/app/views/list.html
@@ -1,14 +1,12 @@
 <div class="big-bar">
     <div class="header-ml">测试人员</div>
-    <p class="search"><input type="text" name="" id="" value="" placeholder="搜索" class="ipt-sou" /><span>搜索</span></p>
+    <p class="search"><input type="text" name="" id="" value="" placeholder="搜索" class="ipt-sou" ng-model="M_aa"/><img src="../images/33.png"></p>
 </div>
-<<<<<<< HEAD
 <!--<div class="bug-bar">
 	<p class="name-ml">发布人:<span class="bug-sp"></span></p>
-=======
+
 <div class="bug-bar" ng-repeat="x in data">
 	<p class="name-ml">发布人:<span class="bug-sp">{{x.from}}</span></p>
->>>>>>> origin/master
 	<div class="bug-content">
 		<div class="bug-left">
 			<p class="bug-name">{{x.summary}}</p>
@@ -20,20 +18,97 @@
 			<p class="errortion">{{x.status}}</p>
 		</div>
 	</div>
-<<<<<<< HEAD
-	<p class="time-ml">2016-11-12</p>
+	<p class="time-ml">{{x.date}}</p>
 </div>-->
 
-
-
-
-<div class="addbug"><span class="btn-addbug">+</span></div>
-
-=======
-	<p class="time-ml">{{x.date}}</p>
+<div class="content-list" >
+	<div class="bug-list" ng-repeat="x in data | filter:M_aa" ui-sref="xq({id:x.id})">
+		<p class="bug-name">{{x.summary}}</p>
+		<p class="importance2"><a ng-class="{im:x.importance==0,im2:x.importance==1,im3:x.importance==2}">{{x.importance|imp}}</a></p>
+		<p class="time-ml">{{x.date}}</p>
+	</div>
+	<div>
+		
+	</div>
 </div>
-<div class="addbug"><span class="btn-addbug" ng-click="ff">+</span></div>
->>>>>>> origin/master
+
+
+
+
+
+
+
+
+
+
+<!--<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true" >
+  <div class="panel panel-default" ng-repeat="x in data">
+    <div class="panel-heading" role="tab" id="heading{{$index}}" >
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          	<div class="bug-list">
+				<p class="bug-name">{{x.summary}}</p>
+				<p class="importance">{{x.importance}}</p>
+				<p class="time-ml">{{x.date}}</p>
+			</div>
+		
+        </a>
+      </h4>
+    </div>
+    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+      <div class="panel-body">
+		       <p class="faburen">发布人:{{x.from}}</p>
+			<p class="inport">重要性:{{x.importance}}</p>
+			<p class="pin">频率:{{x.frequency}}</p>
+			<p class="errors">错误状态:{{x.status}}</p>
+			<p class="times">时间:{{x.date}}</p>
+			<p class="bugs-name">bug名称:{{x.summary}}</p>
+			<div class="bug-xq"><p class="">详情:</p><span class="bug-n">{{x.description}}</span></div>
+			<!--<button type="button" value="">-->		
+      <!--</div>
+    </div>
+  </div>-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="addbug"><span class="btn-addbug"  ng-click="ff">+</span></div>
+
+
 <!--<div>
   <div ng-repeat="x in data">
   	{{x.summary}}
