--- a/app/styles/list.css
+++ b/app/styles/list.css
@@ -1,30 +1,119 @@
 .big-bar{width:100%;height:100%;}
 .header-ml{
 	width:100%;
-	height:2rem;
+	height:1.8rem;
 	background:black;
 	color:white;
-	font-size:0.8rem;	
+	font-size:0.7rem;	
 	text-align:center;
-	line-height:2rem;
+	line-height:1.8rem;
 	font-family: "微软雅黑";
 	}
 .search{
+	width:90%;
+	height:1.4rem;
 	margin:0 auto;
-	margin-top:0.90rem;
-	/*float:left;*/
+	margin-top:0.6rem;
+	margin-left:0.75rem;
+	margin-right:0.75rem;
+	border:1px solid #00BFFF;
+	background:#fff;
+    border-radius:0.5rem;
+    line-height:1.25rem;
 }
 .ipt-sou{
-	width:70%;
-	height:1.4rem;
-	margin-left:0.75rem;
-	border-radius:0.5rem;
+	width:90%;
+	height:1.3rem;
+	outline:none;
+    border-radius:0.5rem;
 	float:left;
 	padding-left:1rem;
 	font-size:0.6rem;
 	color:#000000;
+	float:left;
+	border:none;
 }
-.search span{
+.search img{
+	width:1rem;
+	height:1rem;
+	margin:0 auto;
+}
+
+
+
+
+.content-list{
+	width:100%;
+	height:3.1rem;
+	margin-top:0.9rem;
+}
+.bug-list{
+    width:100%;
+    height:3rem;
+    background:#E4E5E4;
+    border-bottom:0.25rem solid #DBDBDB;
+}
+.bug-name{
+	font-weight:600;
+	width:75%;
+	height:1rem;
+	margin-top:0.2rem;
+	float:left;
+	font-size:0.6rem;
+	color:#000000;
+	line-height:1rem;
+	padding-left:0.5rem;
+}
+/*.importance2{
+	width:3rem;
+	height:1.2rem;
+	background:#AF0004;
+	margin-top:0.2rem;
+	color:#FFFFFF;
+	font-size:0.4rem;
+	text-align:center;
+	line-height:1.2rem;
+	float:right;	
+}*/
+.time-ml{
+	width:70%;
+	height:1rem;
+	font-size:0.65rem;
+	margin-top:0.6rem;
+    line-height:1rem;
+    float:left;
+    /*text-align:right;*/
+    padding-left:1rem;
+}
+.im,.im2,.im3{
+	color:white;
+	font-size:1.2rem;
+	width:2rem;
+	height:1.5rem;
+}
+.im{
+	background:red ;
+}
+.im2{
+	background:orange;
+}
+.im3{
+	background:limegreen;
+}
+/*.name-ml{
+	background: red;
+	width:90%;
+	height:0.8rem;
+	font-size:0.65rem;
+	color:#000000;
+	margin-left:0.6rem;
+	margin-top:0.4rem;
+    line-height:0.8rem;
+    float:left;
+}*/
+
+
+/*.search span{
 	width:3.2rem;
 	height:1.4rem;
 	font-size:0.6rem;
@@ -40,7 +129,7 @@
 	float:left;
 	outline:none;
 	border:0.05rem #DBDBDB soild;
-}
+}*/
 
 
 /*.bug-bar{
@@ -149,6 +238,6 @@
     text-align:center;
     line-height:1.5rem;
      margin-bottom:2rem;
-    background-color:transparent;
+    /*background-color:transparent;*/
     
 }
