--- a/app/views/xq.html
+++ b/app/views/xq.html
@@ -1,3 +1,15 @@
-<div class="">
+<!--<div class="">
 	<img src="../images/san.png">
+</div>-->
+<div class="xq-cont">
+	<!--{{id}}-->
+	<p class="xq-js"><img src="images/1.png" ng-click="list()"/>bug详情</p>
+	<p class="faburen">发布人:<span>{{data.from}}</span></p>
+	<p class="inport" ng-model="imp">重要性:<a ng-class="im">{{imp}}</a></p>
+	<p class="pin" ng-model="fre">频率:<span>{{fre}}</span></p>
+	<p class="errors" ng-model="sta">错误状态:<span>{{sta}}</span></p>
+	<p class="times">时间:<span>{{data.date}}</span></p>
+	<p class="bugs-name">bug名称:<span>{{data.summary}}</span></p>
+	<div class="bug-xq"><p class="xqms">详情:</p><span class="bug-n">{{data.description}}</span></div>
+    <button class="xiufu">修复</button>
 </div>
