--- a/app/views/list.html
+++ b/app/views/list.html
@@ -32,7 +32,7 @@
 	</div>
 </div>
 
-<div class="addbug"><span class="btn-addbug"   ng-click="ff">+</span></div>
+<div class="addbug"><span class="btn-addbug"   ng-click="ff()">+</span></div>
 	<p class="time-ml">{{x.date}}</p>
 </div>
 
