--- a/app/styles/zj.css
+++ b/app/styles/zj.css
@@ -2,6 +2,7 @@
 #ct{width:90%;height:auto;margin:0 auto;color:#ccc}
 #ct p{font-size:20px;margin-top:10px;}
 #ct label{margin:0 10px 0 0}
+#ct input{color:#000;}
 .classify{margin:10px 0 10px 20px;font-size:20px;}
 .frequency{margin:10px 0 10px 20px;font-size:20px;}
 .importance{margin:10px 0 10px 20px;font-size:20px;}
