--- a/app/styles/list.css
+++ b/app/styles/list.css
@@ -1,12 +1,18 @@
-.big-bar{width:100%;height:100%;}
+.big-bar{    
+	width: 100%;
+    height: 5rem;
+    top: 0;
+    background: black;
+    position: fixed;
+    }
 .header-ml{
 	width:100%;
-	height:1.8rem;
+	height:1.6rem;
 	background:black;
 	color:white;
 	font-size:0.7rem;	
 	text-align:center;
-	line-height:1.8rem;
+	line-height:1.6rem;
 	font-family: "微软雅黑";
 	}
 .search{
@@ -45,7 +51,8 @@
 .content-list{
 	width:100%;
 	height:3.1rem;
-	margin-top:0.9rem;
+	margin-top:4.9rem;
+	margin-bottom:1rem;
 }
 .bug-list{
     width:100%;
@@ -64,17 +71,6 @@
 	line-height:1rem;
 	padding-left:0.5rem;
 }
-/*.importance2{
-	width:3rem;
-	height:1.2rem;
-	background:#AF0004;
-	margin-top:0.2rem;
-	color:#FFFFFF;
-	font-size:0.4rem;
-	text-align:center;
-	line-height:1.2rem;
-	float:right;	
-}*/
 .time-ml{
 	width:70%;
 	height:1rem;
@@ -82,7 +78,6 @@
 	margin-top:0.6rem;
     line-height:1rem;
     float:left;
-    /*text-align:right;*/
     padding-left:1rem;
 }
 .im,.im2,.im3{
@@ -100,122 +95,6 @@
 .im3{
 	background:limegreen;
 }
-/*.name-ml{
-	background: red;
-	width:90%;
-	height:0.8rem;
-	font-size:0.65rem;
-	color:#000000;
-	margin-left:0.6rem;
-	margin-top:0.4rem;
-    line-height:0.8rem;
-    float:left;
-}*/
-
-
-/*.search span{
-	width:3.2rem;
-	height:1.4rem;
-	font-size:0.6rem;
-	background:#9BCF00;
-	color:white;
-	display:block;
-	border-radius:0.35rem;
-	font-weight:600;
-	font-family: "微软雅黑";
-	margin-left:0.2rem;
-	text-align:center;
-	line-height:1.4rem;
-	float:left;
-	outline:none;
-	border:0.05rem #DBDBDB soild;
-}*/
-
-
-/*.bug-bar{
-	margin-left:0.8rem;
-	margin-right:0.8rem;
-	height:10rem;
-	background:#E4E5E4;;
-	/*border:0.05rem solid #0190DD;*/
-	/*margin-top:2.2rem;
-	border-radius: 0.8rem;
-    
-}*/
-/*.name-ml{
-	width:92%;
-	height:1rem;
-	font-size:0.65rem;
-	color:#000000;
-	margin-left:0.6rem;
-	margin-top:0.4rem;
-    line-height:1rem;
-    float:left;
-}
-.bug-content{
-	width:92%;
-	height:6rem;
-	float:left;
-	margin-left:0.6rem;
-	margin-top:0.4rem;
-}
-.bug-left{
-	width:70%;
-	height:100%;
-	font-size:0.65rem;	
-	font-family: "微软雅黑";
-	color:#000000;
-	float:left;
-}
-.bug-name{
-	font-weight:600;
-	width:100%;
-	height:1.2rem;
-	margin-top:0.5rem;
-	float:left;
-	font-size:0.65rem;
-	color:#000000;
-}
-.bug-say{
-	width:100%;
-	height:4rem;
-	float:left;
-	margin-top:0.3rem;
-}
-.bug-right{
-	width:25%;
-	float:right;
-}
-
-.time-ml{
-	width:92%;
-	height:1rem;
-	font-size:0.65rem;
-	color:#000000;
-	margin-left:0.6rem;
-	margin-top:0.4rem;
-    line-height:1rem;
-    float:left;
-    text-align:right;
-    padding-right:1rem;
-}
-.importance,.pinlv,.errortion{
-	width:88%;
-	height:1.2rem;
-	background:#AF0004;
-	margin-top:0.6rem;
-	color:#FFFFFF;
-	font-size:0.4rem;
-	text-align:center;
-	line-height:1.2rem;
-	
-}
-.pinlv{
-	background:;
-}
-.errortion{
-	background:;
-}*/
 
 .addbug{
 	width:100%;
@@ -230,7 +109,6 @@
 	margin:0 auto;
 	width:2rem;
 	height:2rem;
-/*	background:red;*/
 	border-radius:50%;
 	border:1px solid red;
 	color:white;
@@ -238,6 +116,32 @@
     text-align:center;
     line-height:1.5rem;
      margin-bottom:2rem;
-    /*background-color:transparent;*/
     
+}
+
+
+.page_btn{
+	width:100%;
+	height:3rem;
+	color:#000000;
+}
+.page_btn span{
+    text-align: center;
+	/*display: block;*/
+	
+	height:3rem;
+	line-height:3rem;
+	float:left;
+	color:#000000;
+	font-size:0.75rem;
+/*	background:red;*/
+/*position: absolute;
+bottom:auto;*/
+
+}
+.page_btn span a{
+	width:auto;
+	height:5rem;
+	float:left;
+	text-align:center;
 }
