--- a/app/styles/zj.css
+++ b/app/styles/zj.css
@@ -1,10 +1,14 @@
-#tb{width:100%;height:60px;background:#000;line-height:60px;color:#fff;text-align:center;font-size:26px;}
+#tb{width:100%;height:60px;background:#252525;line-height:60px;color:#cfcfcf;text-align:center;font-size:26px;border-bottom:2px solid #E5493A;}
+#tb img{float:left;width:20px;height:20px;margin:20px;}
 #ct{width:90%;height:auto;margin:0 auto;color:#ccc}
 #ct p{font-size:20px;margin-top:10px;}
 #ct label{margin:0 10px 0 0}
 #ct input{color:#000;}
+#too{width:100%;float:left;}
+#to{font-size:20px;margin:10px 10px 0 0;}
+#too div{margin:10px 0 10px 20px;font-size:20px;float:left;}
 .classify{margin:10px 0 10px 20px;font-size:20px;}
 .frequency{margin:10px 0 10px 20px;font-size:20px;}
 .importance{margin:10px 0 10px 20px;font-size:20px;}
 .status{margin:10px 0 10px 20px;font-size:20px;}
-.tj{width:50px;height:30px;color:#000;font-size:16px;float:right;margin-top:20px;}
+.tj{width:50px;height:30px;color:#000;font-size:16px;float:right;margin:20px 0;}
