--- a/app/views/list.html
+++ b/app/views/list.html
@@ -32,11 +32,9 @@
 	</div>
 </div>
 
-<<<<<<< HEAD
-<div class="addbug"><span class="btn-addbug" ng-click="ff()">+</span></div>
-=======
-<div class="addbug"><span class="btn-addbug"   ng-click="ff()">+</span></div>
->>>>>>> origin/master
+<div class="addbug" ng-if="isshow">
+	<span class="btn-addbug" ng-click="ff()">+</span>
+</div>
 	<p class="time-ml">{{x.date}}</p>
 </div>
 
