--- a/app/styles/list.css
+++ b/app/styles/list.css
@@ -1,7 +1,8 @@
 .big-bar{    
 	width: 100%;
-    height: 5rem;
+    height: auto;
     top: 0;
+    left:0;
     background: black;
     position: fixed;
     }
@@ -12,16 +13,57 @@
 	color:white;
 	font-size:0.7rem;	
 	text-align:center;
+	padding-left:1rem;
 	line-height:1.6rem;
 	font-family: "微软雅黑";
 	}
+	
+	
+	
+.zhexian{
+	font-size:0.6rem;
+	padding-left: 1.2rem;
+    color:white;
+    line-height:1.8rem;
+	height:0;
+	overflow:hidden;
+	transition: all 1s;
+}
+.zhexian1{
+	font-size:0.6rem;
+	padding-left: 1.2rem;
+    color:white;
+    line-height:1.8rem;
+	height:2rem;
+	overflow:hidden;
+	transition: all 1s;
+}
+.zhexian button{
+	width:2.5rem;
+	margin-top:0.4rem;
+	margin-left:1rem;
+	border-radius: 1.5rem;
+	outline: none;
+}
+.san{
+	width:1.3rem;
+	height:1.3rem;
+	float:right;
+    margin-top:0.4rem;
+    margin-right:1rem;
+    display:block;
+}
+
+
+
 .search{
 	width:90%;
-	height:1.4rem;
+	height:1.6rem;
 	margin:0 auto;
 	margin-top:0.6rem;
 	margin-left:0.75rem;
 	margin-right:0.75rem;
+	margin-bottom:1rem;
 	border:1px solid #00BFFF;
 	background:#fff;
     border-radius:0.5rem;
@@ -50,9 +92,10 @@
 
 .content-list{
 	width:100%;
-	height:3.1rem;
+	height:auto;
 	margin-top:4.9rem;
-	margin-bottom:1rem;
+	margin-bottom:-1.55rem;
+	overflow: auto;
 }
 .bug-list{
     width:100%;
