--- a/app/views/list.html
+++ b/app/views/list.html
@@ -1,39 +1,43 @@
 <div class="big-bar">
-    <div class="header-ml" ng-model="cc">{{cc}}</div>
-    <p class="search"><input type="text" name="" id="" value="" placeholder="搜索" class="ipt-sou" ng-model="M_aa" id="xdt"/><img src="../images/33.png"></p>
-    <div style="width: 100%;height:2rem;"></div>
+    <div class="header-ml">{{cc}}
+    	<span class="san" ng-click="Dinaji()">
+    		<img src="images/2.png"  >
+    	</span>
+    </div>
+    
+    <p class="search">
+    	<input type="text" name="" id="" value="" placeholder="搜索" class="ipt-sou" ng-model="M_aa" id="xdt"/>
+    	<img src="../images/33.png">
+    </p>
+    
 </div>
 
+
+
 <div class="content-list">
-	<div class="bug-list" ng-repeat="x in data | filter:M_aa" ui-sref="xq({id:x.id})"   >
+	<div ng-class="last" ng-click="tiaotu()">图表</div> 
+	<div class="bug-list" ng-repeat="x in data | filter:M_aa" ui-sref="xq({id:x.id}) ">
 		<p class="bug-name">{{x.summary}}</p>
 		<p class="importance2"><a ng-class="{im:x.importance==0,im2:x.importance==1,im3:x.importance==2}">{{x.importance|imp}}</a></p>
 		<p class="time-ml">{{x.date}}</p>
 	</div>
-	<div>
-		
-	</div>
 </div>
+
+
 
 <div class="addbug" ng-if="isshow">
 	<span class="btn-addbug" ng-click="ff()">+</span>
 </div>
 	<p class="time-ml">{{x.date}}</p>
 </div>
-<script type="text/javascript">
-	var t = xdt.offsetTop;
-	onscroll = function(){
-		var scroll = document.documentElement.scrollTop || document.body.scrollTop;
-		if(scroll > t){
-			xdt.style.position = 'fixed';
-			xdt.style.top = '0';
-		}
-		else{
-			xdt.style.position = 'absolute';
-			xdt.style.top = '5rem';
-		}
-	};
 
-</script>
+<!--<script type="text/javascript">
+$(document).ready(function(){
+$(".sanh").click(function(){
+	alert(1)
+    $('.content-list').css('margin-top','5.6rem')
+});
+});
 
+</script>-->
 
