--- a/app/styles/xq.css
+++ b/app/styles/xq.css
@@ -81,3 +81,10 @@
 .im3{
 	background:limegreen;
 }
+.xf{width:3rem;
+	height:1.5rem;
+	font-size:0.9rem;
+	color:#000000;
+	float:right;
+	margin-right:0.9rem;
+	margin-top:50px;}
