--- a/app/views/list.html
+++ b/app/views/list.html
@@ -1,39 +1,26 @@
 <div class="big-bar">
-    <div class="header-ml" ng-model="cc">{{cc}}</div>
-    <p class="search"><input type="text" name="" id="" value="" placeholder="搜索" class="ipt-sou" ng-model="M_aa" id="xdt"/><img src="../images/33.png"></p>
+    <div class="header-ml" ng-model="cc">{{cc}}
+    </div>
+    <p class="search">
+    	<input type="text" name="" id="" value="" placeholder="搜索" class="ipt-sou" ng-model="M_aa" id="xdt"/>
+    	<img src="images/33.png"></p>
     <div style="width: 100%;height:2rem;"></div>
 </div>
 
 <div class="content-list">
-	<div class="bug-list" ng-repeat="x in data | filter:M_aa" ui-sref="xq({id:x.id})"   >
-		<p class="bug-name">{{x.summary}}</p>
+	<div class="bug-list" ng-repeat="x in data | filter:M_aa | limitTo : 6" ui-sref="xq({id:x.id})">
+		<div class="bug-name">{{x.summary}}</div>
 		<p class="importance2"><a ng-class="{im:x.importance==0,im2:x.importance==1,im3:x.importance==2}">{{x.importance|imp}}</a></p>
 		<p class="time-ml">{{x.date}}</p>
 	</div>
-	<div>
-		
-	</div>
 </div>
+<!-- 分页 -->
+<button type="submit" class="jiahaoa" ng-click="shang()" >上一页</button>
+<button type="submit" class="jiahaob" ng-click="next() ">下一页</button>
 
+<!-- 添加bug页面 -->
 <div class="addbug" ng-if="isshow">
 	<span class="btn-addbug" ng-click="ff()">+</span>
 </div>
 	<p class="time-ml">{{x.date}}</p>
 </div>
-<script type="text/javascript">
-	var t = xdt.offsetTop;
-	onscroll = function(){
-		var scroll = document.documentElement.scrollTop || document.body.scrollTop;
-		if(scroll > t){
-			xdt.style.position = 'fixed';
-			xdt.style.top = '0';
-		}
-		else{
-			xdt.style.position = 'absolute';
-			xdt.style.top = '5rem';
-		}
-	};
-
-</script>
-
-
