图表页面跳转list

--- a/app/views/tu.html
+++ b/app/views/tu.html
@@ -1,4 +1,4 @@
-<div class="tu-list"><img src="../images/1.png"><span>图表展示</span></div>
+<div class="tu-list"><img src="../images/1.png" ng-click="tulist()"><span>图表展示</span></div>
 
 <!-- Nav tabs -->
 <ul class="nav nav-tabs" role="tablist" id="nav">
