--- a/app/styles/tu.css
+++ b/app/styles/tu.css
@@ -1,19 +1,13 @@
 .tu-list{
 	width:100%;
-	height:2.3rem;
+	height:2.8rem;
 	background:black;
 	color:white;
 	font-size:0.7rem;	
 	text-align:center;
-	line-height:2.3rem;
+	line-height:2.8rem;
 	font-family: "微软雅黑";
-}
-.tu-list img{
-	width:0.8rem;
-	height:0.8rem;
-	margin-left:1rem;
-	margin-top:0.7rem;
-	float:left;
+	padding-right:1.7rem;
 }
 .nav-tabs li{
 		float:left; 
@@ -28,8 +22,12 @@
 }
 .tab-content{
 	clear:both;
-	margin-top:3rem;
+	margin:3rem 0 1rem 0;
 	display:none;
+}
+canvas{
+	width:80%;
+	margin:0 auto;
 }
 .one{
 	background:pink;
