--- a/app/styles/zj.css
+++ b/app/styles/zj.css
@@ -1,6 +1,6 @@
-#tb{width:100%;height:60px;background:#252525;line-height:60px;color:#cfcfcf;text-align:center;font-size:26px;border-bottom:2px solid #E5493A;}
-#tb img{float:left;width:20px;height:20px;margin:20px;}
-#ct{width:90%;height:auto;margin:0 auto;color:#ccc}
+#tb{width:100%;height:60px;background:#252525;line-height:60px;color:#cfcfcf;text-align:center;font-size:22px;border-bottom:2px solid #E5493A;position:fixed;z-index:1}
+#fh{float:left;width:20px;height:20px;margin:20px;}
+#ct{width:90%;height:auto;margin:0 auto;padding-top:60px;color:#ccc}
 #ct p{font-size:20px;margin-top:10px;}
 #ct label{margin:0 10px 0 0}
 #ct input{color:#000;}
