--- a/app/views/list.html
+++ b/app/views/list.html
@@ -1,6 +1,6 @@
 <div class="big-bar">
     <div class="header-ml">
-        <img src="images/1.png" id="fh">
+        <img src="images/1.png" id="fh" ng-click="fh()"/>
         {{cc}}
     	<span class="san" ng-click="Dinaji()">
     		<img src="images/2.png">
