--- a/app/views/zj.html
+++ b/app/views/zj.html
@@ -1,5 +1,5 @@
 <div id="tb">
-	<img src="images/1.png" id="fh"/>
+	<img src="images/1.png" id="fh" ng-click="fh()"/>
 	添加bug
 </div>
 <div id="ct">
