--- a/app/views/xq.html
+++ b/app/views/xq.html
@@ -1,5 +1,5 @@
 <p class="xq-js">
-	<img src="images/1.png" id="fh"/>bug详情
+	<img src="images/1.png" id="fh" ng-click="fh()"/>bug详情
 </p>
 <div class="xq-cont">
 	<!--{{id}}-->
